[package]
name = "normalize-url-rs"
description = "Port of Node.js URL normalization library"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/frysztak/normalize-url-rs"
homepage = "https://github.com/frysztak/normalize-url-rs"
license = "MIT"
keywords = ["url", "normalize", "normalization"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
derive_builder = "0.12.0"
fancy-regex = "0.11.0"
lazy_static = "1.4.0"
thiserror = "1.0.38"
url = "2.3.1"
urlencoding = "2.1.2"

[dev-dependencies]
rstest = "0.16.0"
