[package]
name = "normalize-url-rs"
description = "Port of Node.js URL normalization library"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/frysztak/normalize-url-rs"
homepage = "https://github.com/frysztak/normalize-url-rs"
license = "MIT"
keywords = ["url", "normalize", "normalization"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derive_builder = "0.20"
fancy-regex = "0.16"
lazy_static = "1"
thiserror = "2"
url = "2"
urlencoding = "2"

[dev-dependencies]
rstest = "0.26"
